# wxWidgets-vsc-cmake

./: CMakeLists.txt
src/: main.cpp
